--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"testing api host on netlify\"",
   "main": "./backend/index.js",
   "scripts": {
-    "nodemon": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "sarib",
   "license": "ISC",
